--- a/@fartingchickenman576/video/7568556848639560990/index.html
+++ b/@fartingchickenman576/video/7568556848639560990/index.html
@@ -7,12 +7,12 @@
   <meta property="og:site_name" content="TikTok" />
   <meta property="og:description" content="TikTok video by chickenthatfarts" />
   <meta property="og:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990" />
-  <meta property="og:image" content="https://p16-sign-va.tiktokcdn.com/obj/tos-maliva-p-0068/31d4c46d5fda2d0b115d0b3c7fb7aef4_1698245930?x-expires=1702234800&x-signature=5ocQAqg8jCOwbl6E1MVRDLcxGLs%3D" />
+  <meta property="og:image" content="https://i.imgur.com/KA2SS5n.jpg" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="TikTok · chickenthatfarts" />
   <meta name="twitter:description" content="TikTok video by chickenthatfarts" />
-  <meta name="twitter:image" content="https://p16-sign-va.tiktokcdn.com/obj/tos-maliva-p-0068/31d4c46d5fda2d0b115d0b3c7fb7aef4_1698245930?x-expires=1702234800&x-signature=5ocQAqg8jCOwbl6E1MVRDLcxGLs%3D" />
+  <meta name="twitter:image" content="https://i.imgur.com/KA2SS5n.jpg" />
   <meta name="twitter:site" content="@tiktok_us" />
   <meta name="twitter:domain" content="tiktok.com" />
   <script src="redirect.js"></script>
