--- a/@fartingchickenman576/video/7568556848639560990/index.html
+++ b/@fartingchickenman576/video/7568556848639560990/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
+  <!-- Primary Meta Tags -->
   <title>TikTok · chickenthatfarts</title>
-  <meta property="og:title" content="TikTok · chickenthatfarts" />
-  <meta property="og:site_name" content="TikTok" />
-  <meta property="og:description" content="TikTok video by chickenthatfarts" />
-  <meta property="og:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990" />
-  <meta property="og:image" content="https://imgur.com/a/KA2SS5n" />
+  <meta name="title" content="TikTok · chickenthatfarts" />
+  <meta name="description" content="TikTok video by chickenthatfarts" />
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="TikTok · chickenthatfarts" />
-  <meta name="twitter:description" content="TikTok video by chickenthatfarts" />
-  <meta name="twitter:image" content="https://imgur.com/a/KA2SS5n" />
-  <meta name="twitter:site" content="@tiktok_us" />
-  <meta name="twitter:domain" content="tiktok.com" />
+  <meta property="og:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
+  <meta property="og:title" content="TikTok · chickenthatfarts" />
+  <meta property="og:description" content="TikTok video by chickenthatfarts" />
+  <meta property="og:image" content="calc.jpg" />
+
+  <!-- X (Twitter) -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
+  <meta property="twitter:title" content="TikTok · chickenthatfarts" />
+  <meta property="twitter:description" content="TikTok video by chickenthatfarts" />
+  <meta property="twitter:image" content="calc.jpg" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
   <script src="redirect.js"></script>
 </head>
 <body>
