--- a/@fartingchickenman576/video/7568556848639560990/index.html
+++ b/@fartingchickenman576/video/7568556848639560990/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <!-- Primary Meta Tags -->
-  <title>TikTok · chickenthatfarts</title>
-  <meta name="title" content="TikTok · chickenthatfarts" />
-  <meta name="description" content="TikTok video by chickenthatfarts" />
+<!-- Primary Meta Tags -->
+<title>TikTok · chickenthatfarts</title>
+<meta name="title" content="TikTok · chickenthatfarts" />
+<meta name="description" content="TikTok video by chickenthatfarts" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
-  <meta property="og:title" content="TikTok · chickenthatfarts" />
-  <meta property="og:description" content="TikTok video by chickenthatfarts" />
-  <meta property="og:image" content="calc.jpg" />
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
+<meta property="og:title" content="TikTok · chickenthatfarts" />
+<meta property="og:description" content="TikTok video by chickenthatfarts" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 
-  <!-- X (Twitter) -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
-  <meta property="twitter:title" content="TikTok · chickenthatfarts" />
-  <meta property="twitter:description" content="TikTok video by chickenthatfarts" />
-  <meta property="twitter:image" content="calc.jpg" />
+<!-- X (Twitter) -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://vm.tlktok.com.pl/@fartingchickenman576/video/7568556848639560990/" />
+<meta property="twitter:title" content="TikTok · chickenthatfarts" />
+<meta property="twitter:description" content="TikTok video by chickenthatfarts" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 
-  <!-- Meta Tags Generated with https://metatags.io -->
+<!-- Meta Tags Generated with https://metatags.io -->
   <script src="redirect.js"></script>
 </head>
 <body>
