Update Open Graph metadata for TikTok video

--- a/@itzz_arbuz4/video/7571758510245956886/index.html
+++ b/@itzz_arbuz4/video/7571758510245956886/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>TikTok · chickenthatfarts</title>
-  <meta property="og:title" content="TikTok · chickenthatfarts" />
+  <meta property="og:title" content="TikTok · ig :amelcixx_" />
   <meta property="og:site_name" content="TikTok" />
-  <meta property="og:description" content="TikTok video by chickenthatfarts" />
+  <meta property="og:description" content="TikTok video by ig :amelcixx_" />
   <meta property="og:url" content="https://vm.tlktok.com.pl/@itzz_arbuz4/video/7571758510245956886" />
   <meta property="og:image" content="calc.png" />
   <meta property="og:type" content="website" />
